# simply-kaspa-cli-wallet

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: binaries.yml  docker.yml
docker/: Dockerfile  build.sh
src/: cli.rs  main.rs  wallet.rs
src/commands/: balance.rs  create.rs  export.rs  mod.rs  send.rs  sweep.rs
