[package]
name = "simply-kaspa-cli-wallet"
version = "0.1.0"
edition = "2024"
authors = ["suprtypo@pm.me"]
license = "MIT"

[[bin]]
name = "kaspa-wallet"
path = "src/main.rs"

[dependencies]
kaspa-wallet-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.1.0" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.1.0" }
kaspa-bip32 = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.1.0" }
kaspa-wallet-keys = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.1.0" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.1.0" }
workflow-core = { version = "0.18.0" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "cargo"] }
rpassword = "7"
anyhow = "1"
zeroize = "1"

# workflow-node 0.18.0 and the kaspa git crates require wasm-bindgen 0.2.100.
# Newer versions of wasm-bindgen removed the Eq impl on JsValue which breaks workflow-node.
# Pinning here forces the dependency resolver to select exactly this version.
wasm-bindgen = "=0.2.100"
