[package]
name = "simply-kaspa-cli-wallet"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
authors = ["suprtypo@pm.me"]
license-file = "LICENSE"

[profile.dev]
panic = "abort"

[profile.release]
lto = "thin"
strip = true
overflow-checks = true
panic = "abort"

[[bin]]
name = "kaspa-wallet"
path = "src/main.rs"

[dependencies]
kaspa-wallet-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "tn12" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "tn12" }
kaspa-bip32 = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "tn12" }
kaspa-wallet-keys = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "tn12" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "tn12" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "tn12" }
workflow-core = { version = "0.18.0" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "cargo"] }
rpassword = "7"
anyhow = "1"
